[gd_scene load_steps=5 format=3 uid="uid://bf47rsapp56x"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_06mqm"]
[ext_resource type="Texture2D" uid="uid://ddk7jmi2do5r1" path="res://Art/Background 6 (Bonus).png" id="2_7a1ia"]
[ext_resource type="PackedScene" uid="uid://dcy3uggdml2os" path="res://OptionsMenu.tscn" id="3_x7dxp"]

[sub_resource type="FontFile" id="FontFile_2hhxq"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/55/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/55/0 = Vector2(0, 0)
cache/0/55/0/ascent = 0.0
cache/0/55/0/descent = 0.0
cache/0/55/0/underline_position = 0.0
cache/0/55/0/underline_thickness = 0.0
cache/0/55/0/scale = 1.0
cache/0/55/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/55/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/55/0/kerning_overrides/55/0 = Vector2(0, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06mqm")

[node name="Container" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="Container"]
position = Vector2(1260, 300)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_7a1ia")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -269.0
offset_right = -269.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 550
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 550
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = SubResource("FontFile_2hhxq")
theme_override_font_sizes/font_size = 55
text = "Reflections of Vanity"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Info" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Info"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("3_x7dxp")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
